# MediaForge

./: .gitignore  CHANGELOG.md  CHILD_PROCESS_LEAK_FIX_SUMMARY.md  CONTRIBUTING.md  LICENSE  MEDIAFORGE_AUDIT_REPORT.md  MEDIAFORGE_REMAINING_ISSUES.md  RACE_CONDITION_FIX_SUMMARY.md  README.md  SECURITY.md  build-production.sh  index.html  install-icons.sh  package-lock.json  package.json  setup.sh  vite.config.ts
src/: App.tsx  index.css
src-tauri/: Cargo.toml  mediaforge.desktop  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  converter.rs  downloader.rs  error.rs  lib.rs  notifications.rs  system.rs  types.rs
src/api/: tauri.ts
src/components/: ConvertSection.tsx  DownloadQueue.tsx  DownloadSection.tsx  ErrorBoundary.tsx  Header.tsx  Sidebar.tsx  SplashScreen.tsx  Toast.tsx  ToastContainer.tsx
src/contexts/: ToastContext.tsx
src/hooks/: useToast.ts
src/types/: tauri.ts
src/utils/: validation.ts
